# xb--4g--youfang

./: CMakeLists.txt  README.md  ble_test.c  call.c  file_save.c  hello_world.c  log.txt  main_xb.c  mqtt.c  nwy_aws_mqtt_test.c  nwy_azure_test.c  nwy_drv_lcd_st7735.c  nwy_lite_config.bat  nwy_multi_socket_test.c  nwy_opencpu.bat  nwy_rhino_ids_test.c  nwy_utf8_gbk_ucs2.c  parse.c  rs485.c
cmake/: core_config.cmake
components/include/: MQTTClient.h  atr_config.h  ats_config.h  drv_spi.h  hal_config.h  nwy_audio_api.h  nwy_ble.h  nwy_ble_client.h  nwy_common.h  nwy_config.h  nwy_data.h  nwy_dm.h  nwy_file.h  nwy_fota_api.h  nwy_ftp.h  nwy_lcd_bus.h  nwy_led.h  nwy_loc.h  nwy_loc_hx.h  nwy_md5.h  nwy_mqtt.h  nwy_network.h  nwy_osi_api.h  nwy_pm.h  nwy_poc_dsds.h  nwy_pwm.h  nwy_sat.h  nwy_sim.h  nwy_sms.h  nwy_socket.h  nwy_usb_serial.h  nwy_ussd.h  nwy_vir_at.h  nwy_voice.h  nwy_wifi.h  prj.h
components/lib/: fdl1.img  fdl2.img
components/newlib/include/: assert.h
nwy_test_cli/: CMakeLists.txt  Neoway_N58_Open_Example_usage.docx
nwy_test_cli/comm/: nwy_test_cli_adpt.c  nwy_test_cli_adpt.h  nwy_test_cli_menu.c  nwy_test_cli_utils.c  nwy_test_cli_utils.h
nwy_test_cli/modules/: nwy_test_cli_driver.c  nwy_test_cli_func_def.h  nwy_test_cli_iot.c  nwy_test_cli_lbs.c  nwy_test_cli_mobile.c  nwy_test_cli_os.c  nwy_test_cli_sdw.c  nwy_test_cli_tcpip.c
nwy_test_qxmx/: CMakeLists.txt
nwy_test_qxmx/inc/: qxwz_sdk.h  qxwz_status.h  qxwz_types.h
nwy_test_rtcm/: CMakeLists.txt
nwy_test_rtcm/inc/: qxwz_sdk_hl.h
nwy_test_rtmp/: CMakeLists.txt  nwy_rtmp_test.c
nwy_test_rws/: CMakeLists.txt  nwy_rws_test.c
nwy_test_tbox_sq/: CMakeLists.txt
tools/win32/setting/: fota8910.xml
